RESOLVED FIXED98045
[Qt][WK2] REGRESSION(r130029): It broke an API test
https://bugs.webkit.org/show_bug.cgi?id=98045
Summary [Qt][WK2] REGRESSION(r130029): It broke an API test
Csaba Osztrogonác
Reported 2012-10-01 10:00:27 PDT
********* Start testing of tst_QQuickWebView ********* ... FAIL! : tst_QQuickWebView::scrollRequest() 'webView()->contentY() == y' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp(452)] ...
Attachments
Patch (3.38 KB, patch)
2012-10-02 04:33 PDT, Jocelyn Turcotte
no flags
Patch (3.57 KB, patch)
2012-10-03 03:47 PDT, Jocelyn Turcotte
hausmann: review+
Jocelyn Turcotte
Comment 1 2012-10-02 04:33:37 PDT
Created attachment 166664 [details] Patch Thanks, here's a fix.
WebKit Review Bot
Comment 2 2012-10-02 07:37:10 PDT
Comment on attachment 166664 [details] Patch Clearing flags on attachment: 166664 Committed r130168: <http://trac.webkit.org/changeset/130168>
WebKit Review Bot
Comment 3 2012-10-02 07:37:13 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 4 2012-10-02 23:33:16 PDT
(In reply to comment #2) > (From update of attachment 166664 [details]) > Clearing flags on attachment: 166664 > > Committed r130168: <http://trac.webkit.org/changeset/130168> Reopen, because the bug is still valid after this fix. FAIL! : tst_QQuickWebView::scrollRequest() 'webView()->contentY() == y' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp(453)]
Jocelyn Turcotte
Comment 5 2012-10-03 03:47:04 PDT
Created attachment 166849 [details] Patch This one was a real bug I couldn't get on Linux but got on Mac. Let's see if this is the same issue, this is an improvement in any case.
Jocelyn Turcotte
Comment 6 2012-10-04 03:43:46 PDT
Note You need to log in before you can comment on or make changes to this bug.