[Qt] Fix the tst_QQuickWebView::scrollRequest auto test https://bugs.webkit.org/show_bug.cgi?id=98045

Reviewed by Simon Hausmann.

Relying on QQuickWebViewPrivate::setNeedsDisplay can cause a false positive
emission of the loadVisuallyCommitted signal since this method is also
called when a layer is deleted or when the root layer changes.

Move the signal emission to QQuickWebViewPrivate::didRenderFrame which
is called only after a DidRenderFrame message has been received from the
web process.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::setNeedsDisplay):
(QQuickWebViewPrivate::didRenderFrame):
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):
* UIProcess/qt/QtPageClient.cpp:
(WebKit::QtPageClient::didRenderFrame):

Canonical link: https://commits.webkit.org/116379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130382 268f45cc-cd09-0410-ab3c-d52691b4dbfc