Source/WebKit2/UIProcess/API/qt/qquickwebview_p_p.h
@@ -88,6 +88,7 @@ public:
 
     int loadProgress() const { return m_loadProgress; }
     void setNeedsDisplay();
+    void didRenderFrame();
 
     WebKit::PageViewportController* viewportController() const { return m_pageViewportController.data(); }
     virtual void updateViewportSize() { }
